RESOLVED FIXED215660
[Mac] REGRESSION(r262322): Focusable elements are focused when exiting from video fullscreen mode.
https://bugs.webkit.org/show_bug.cgi?id=215660
Summary [Mac] REGRESSION(r262322): Focusable elements are focused when exiting from v...
Jer Noble
Reported 2020-08-19 12:56:27 PDT
[Mac] REGRESSION(r262322): Focusable elements are focused when exiting from video fullscreen mode.
Attachments
Patch (2.14 KB, patch)
2020-08-19 13:05 PDT, Jer Noble
darin: review+
Patch for landing (10.59 KB, patch)
2020-08-24 16:25 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-08-19 12:56:59 PDT
Jer Noble
Comment 2 2020-08-19 13:05:37 PDT
Darin Adler
Comment 3 2020-08-19 13:35:27 PDT
Comment on attachment 406869 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406869&action=review > Source/WebKit/ChangeLog:12 > + The default behavior of NSWindow is to change its -keyViewSelectionDirection to NSSelectingNext when activating > + and changing the firstResponder. This causes WKWebView to change it's focus in response to becoming first responder. > + The cheap fix is to ensure WKWebView is already the firstResponder when the window is activated. Then NSWindow won't > + try to change the firstResponder in response to activation. Regression test?
Jer Noble
Comment 4 2020-08-24 16:25:43 PDT
Created attachment 407148 [details] Patch for landing
EWS
Comment 5 2020-08-25 11:08:01 PDT
Committed r266134: <https://trac.webkit.org/changeset/266134> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407148 [details].
Note You need to log in before you can comment on or make changes to this bug.